Added background color to body

--- a/unit-converter/css/style.css
+++ b/unit-converter/css/style.css
@@ -5,6 +5,7 @@ html, body {
     font-family: 'Inter', sans-serif;
     font-size: 14px;
     color: #fff;
+    background: #1f2937;
 }
 
 /* Typography */
