Added value user input to unit converter

--- a/unit-converter/css/style.css
+++ b/unit-converter/css/style.css
@@ -36,6 +36,8 @@ header {
     padding: 54px 0;
 }
 
+/* TODO: input styling */
+
 .conversions {
     background: #1f2937;
     text-align: center;
