--- a/unit-converter/css/style.css
+++ b/unit-converter/css/style.css
@@ -36,10 +36,26 @@ header {
     padding: 54px 0;
 }
 
-/* TODO: input styling */
-input {
-    border: none;
-    border-radius: 5px;
+input[type=text] {
+    font-family: 'Inter', sans-serif;
+    font-size: 14px;
+    width: 100px;
+
+    border-style: none;
+    border-radius: 8px;
+    padding: 4.5px 10px;
+}
+
+input[type=button] {
+    font-family: 'Inter', sans-serif;
+    font-size: 14px;
+    cursor: pointer;
+
+    color: #fff;
+    background: #1f2937;
+    border-style: none;
+    border-radius: 8px;
+    padding: 5px 16px;
 }
 
 .conversions {
