--- a/passenger-counter/index.css
+++ b/passenger-counter/index.css
@@ -1,4 +1,5 @@
 body {
+    background-image: url(station.jpeg);
     background-size: cover;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
     'Open Sans', 'Helvetica Neue', sans-serif;
