--- a/password-generator/index.css
+++ b/password-generator/index.css
@@ -1,5 +1,6 @@
 body {
-    margin: 0;
+    margin: 0 52px;
+    width: 446px;
     background: #1F2937;
     color: #fff;
     font-family: 'Inter', sans-serif;
@@ -17,7 +18,7 @@ h1 {
 }
 
 h1 span {
-    color: #10B981;
+    color: #4ADF86;
 }
 
 h2 {
@@ -28,8 +29,8 @@ h2 {
 }
 
 header {
-    margin: 115px 0 52px 52px;
-    width: 446px;
+    margin-top: 115px;
+    margin-bottom: 35px;
     border-bottom: 1px solid #2F3E53;
 }
 
@@ -43,4 +44,29 @@ button {
     color: #fff;
     font-size: 16px;
     font-weight: 500;
+}
+
+main {
+    display: flex;
+}
+
+/* TODO: fix p height before passwords are rendered */
+p {
+    margin: auto;
+    padding: 4px 15px;
+    width: 211px;
+    border: none;
+    border-radius: 6px;
+    background: #273549;
+    color: #55F991;
+    text-align: center;
+    line-height: 32px;
+}
+
+#password1-el {
+    margin-right: 12px;
+}
+
+#password2-el {
+    margin-left: 12px;
 }
