--- a/password-generator/index.css
+++ b/password-generator/index.css
@@ -78,7 +78,9 @@ button {
     background: #273549;
     color: #55F991;
     text-align: center;
+    font-family: 'Inter', sans-serif;
     font-size: 16px;
+    font-weight: 500;
 }
 
 button:hover {
