--- a/movie-watchlist/index.css
+++ b/movie-watchlist/index.css
@@ -6,6 +6,8 @@ html, body {
     margin: 0;
     padding: 0;
     font-family: 'Inter', sans-serif;
+    background-color: #121212;
+    color: #fff;
     height: 100vh;
 }
 
@@ -16,7 +18,6 @@ html, body {
 header {
     background-image: url('images/header-img.png');
     background-size: cover;
-    color: #fff;
     position: relative;
     display: flex;
     height: 13em;
@@ -34,7 +35,7 @@ header {
 }
 
 .placeholder {
-    color: #DFDDDD;
+    color: #787878;
     text-align: center;
 }
 
@@ -50,39 +51,40 @@ form {
     transform: translate(-50%, 50%);
     display: flex;
     align-items: center;
-    border: 1px solid #d1d5db;
+    border: none;
     border-radius: 6px;
-    background-color: #fff;
-    box-shadow: 0 2px 1px #f9fafb;
+    background-color: #2E2E2F;
 }
 
 .fa-magnifying-glass {
-    color: #9ca3af;
+    color: #A5A5A5;
     padding: 0 0.5em 0 1em;
 }
 
 input[type='text'] {
     background: none;
-    color: #6b7280;
+    color: #A5A5A5;
     font-family: inherit;
-    font-weight: 500;
     font-size: 0.875rem;
     padding: 0.75em 0.5em;
     border: none;
-    border-right: 1px solid #d1d5db;
     flex: 1;
 }
 
-form button {
-    background-color: #f9fafb;
-    color: #374151;
+button {
+    background-color: #4B4B4B;
+    color: #fff;
     font-family: inherit;
-    font-weight: 500;
     font-size: 0.875rem;
     padding: 0.75em 2.5em;
     border: none;
-    border-radius: 6px;
+    border-radius: 0 6px 6px 0;
     cursor: pointer;
+}
+
+button:hover,
+button:focus {
+    background-color: #787878;
 }
 
 /* =================
@@ -101,7 +103,6 @@ h3 {
 }
 
 h4 {
-    color: #111827;
     font-size: 0.75rem;
     font-weight: 400;
     margin: 0;
@@ -116,6 +117,7 @@ a {
 }
 
 .fa-film {
+    color: #2E2E2F;
     font-size: 4rem;
 }
 
@@ -123,6 +125,10 @@ a {
     font-weight: 700;
     font-size: 1.125rem;
     margin: 0.5em 0 0;
+}
+
+.explore-text {
+    color: #2E2E2F;
 }
 
 /* =================
@@ -138,7 +144,7 @@ a {
     align-items: center;
     padding: 1.25em 0;
     gap: 1.25em;
-    border-bottom: 1.5px solid #E5E7EB;
+    border-bottom: 1.5px solid #2C2C2C;
 }
 
 .movie-img {
@@ -152,8 +158,11 @@ a {
     gap: 0.5em;
 }
 
+.fa-star {
+    color: #FEC654;
+}
+
 .movie-info {
-    color: #111827;
     display: flex;
     align-items: center;
     gap: 1.875em;
@@ -175,13 +184,15 @@ a {
 .movie-plot {
     font-size: 0.875rem;
     line-height: 1.5;
-    color: #6B7280;
+    color: #A5A5A5;
     margin: 0;
 }
 
 /* =================
     Media Queries 
    ================= */
+
+/* TODO: add responsiveness for larger screens */
 
 @media (min-width: 768px) {
     form {
