--- a/movie-watchlist/index.css
+++ b/movie-watchlist/index.css
@@ -71,10 +71,15 @@ input[type='text'] {
     flex: 1;
 }
 
-button {
-    background-color: #4B4B4B;
+form button,
+.movie-btn,
+.watchlist-btn {
     color: #fff;
     font-family: inherit;
+}
+
+form button {
+    background-color: #4B4B4B;
     font-size: 0.875rem;
     padding: 0.75em 2.5em;
     border: none;
@@ -82,8 +87,8 @@ button {
     cursor: pointer;
 }
 
-button:hover,
-button:focus {
+form button:hover,
+form button:focus {
     background-color: #787878;
 }
 
@@ -116,6 +121,11 @@ a {
     cursor: pointer;
 }
 
+a:hover,
+a:focus {
+    color: #FEC654;
+}
+
 .fa-film {
     color: #2E2E2F;
     font-size: 4rem;
@@ -124,7 +134,7 @@ a {
 .placeholder-text {
     font-weight: 700;
     font-size: 1.125rem;
-    margin: 0.5em 0 0;
+    margin: 0.25em 0 1em;
 }
 
 .explore-text {
@@ -170,14 +180,21 @@ a {
     font-size: 0.75rem;
 }
 
-.movie-info span {
-    display: flex;
-    align-items: center;
-    gap: 0.35em;
+.movie-btn,
+.watchlist-btn {
+    background: none;
+    border: none;
+    font-size: 0.75rem;
     cursor: pointer;
 }
 
-.fa-circle-plus {
+.movie-info span {
+    display: flex;
+    align-items: center;
+}
+
+.fa-circle-plus,
+.fa-circle-minus {
     font-size: 1rem;
 }
 
